<resources>

    <!--GENERAL-->
    <string name="app_name">Cartas Contra la Humanidad</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="limpiar_datos">Limpiar datos</string>
    <string name="eligeIdioma">Elige idioma..</string>
    <string name="noUsuari">No tienes usuario, quieres iniciar tu sesion?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="confirmar">Estas seguro?</string>
    <string name="espanol">Traduciendo al castellano</string>
    <string name="catalan">Traduciendo al catalan</string>
    <string name="ingles">Traduciendo al ingles</string>
    <string name="lDatos">Se han borrado los datos</string>
    <string name="tituloAjustes">Ajustes</string>
    <string name="tituloPerfil">Perfil</string>
    <string name="internet_dialog_cargando">Cargando..</string>
    <string name="tituloLogin">Inicio sesion</string>
    <string name="tituloRegistro">Registro</string>
    <string name="selecciona">Que prefieres?</string>
    <string name="galeria">Galería</string>
    <string name="camara">Cámara</string>
    <string name="no_error_registro">Te has registrado correctamente</string>
    <string name="camposVacios">Campos vacios</string>
    <string name="cancel">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="idioma">Idioma:</string>

    <!--LOGIN/REGISTRO-->
    <string name="inicia_session">Iniciar Sesión</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="salida">Salir</string>
    <string name="foto_perfil">Foto perfil</string>
    <string name="selecciona_imagen">Seleccionar imagen</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="loginCorrecto">Has iniciado sesion correctamente</string>
    <string name="borrar_cuenta_success">Se ha borrado la cuenta</string>

    <!--BARAJA-->
    <string name="mCarac">Has superado el maximo de caracteres. Maximo 15.</string>
    <string name="crear_baraja">Crear baraja</string>
    <string name="verBaraja">Ver baraja</string>
    <string name="editarBaraja">Editar baraja</string>
    <string name="editarCarta">Editar carta</string>
    <string name="numero_de_cartas">Numero de cartas:</string>
    <string name="nom_creador">Nombre creador:</string>
    <string name="texto">Contenido de la carta:</string>
    <string name="numEspacios">Numero espacios vacios:</string>
    <string name="crear_nueva_carta_blanca">Crear nueva carta Blanca</string>
    <string name="crear_nueva_carta_negra">Crear nueva carta Negra</string>
    <string name="nuevo_contenido_de_la_carta">Nuevo contenido de la carta:</string>
    <string name="nueva_cantidad_de_espacios">Nueva cantidad de espacios:</string>
    <string name="crear_carta">Crear carta</string>
    <string name="crear_mazo">Crear nuevo mazo</string>
    <string name="idioma_del_mazo">Idioma del mazo:</string>
    <string name="nombre_de_la_baraja">Nombre de la baraja:</string>
    <string name="mazo_creado_correctamente">Has creado la baraja correctamente</string>
    <string name="idioma_no_valido">El idioma es incorrecto. Valores validos es,ca,en.</string>
    <string name="num_espacios_invalido">El numero de espacios vacios es muy elevado. Maximo 3, minimo 1.</string>
    <string name="contenido_vacio">El contenido de la carta esta vacio</string>
    <string name="nombre_baraja_vacio">El nombre de la baraja esta vacio</string>
    <string name="no_editable">Esta baraja no se puede editar</string>
    <string name="borrar_baraja">Borrar baraja</string>
    <string name="no_borrable">Esta baraja no se puede borrar</string>
    <string name="mazo_borrado_correctamente">Has borrado correctamente la baraja</string>
    <string name="borrar_carta">Borrar carta</string>

    <!--PARTIDA-->
    <string name="nombre_de_la_partida">Nombre de la partida</string>
    <string name="contrase_a_partida">Contraseña Partida</string>
    <string name="partidas_ganadas">Partidas ganadas</string>
    <string name="jugar">Jugar</string>
    <string name="baraja">Baraja</string>
    <string name="crear_partida">Crear partida</string>
    <string name="unirse_partida">Unirse a partida</string>

    <!-- ERRORES -->
    <string name="error_unknown_error">Error desconocido</string>
    <string name="error_invalid_parameters">Uno o varios parametros indicados no son válidos</string>
    <string name="error_existing_email">El correo que has indicado ya está registrado</string>
    <string name="error_invalid_email">El correo que has indicado no es válido</string>
    <string name="error_password_diff">La contraseña no coincide</string>
    <string name="error_erase_user_nouser">El usuario que intentas borrar no existe</string>
    <string name="error_no_existe_baraja">La baraja no existe</string>
    <string name="error_usuario_no_existe">El usuario no existe</string>
    <string name="error_partida_no_existe">La partida no existe</string>
    <string name="emailContraMal">Contraseña y/o email incorrectos</string>
    <string name="noConexion">No se ha podido conectar al servidor</string>
    <string name="invalidPassword">Contraseña no valida.</string>
    <string name="notLogin">Usuario no registrado.</string>

    <!--OTROS + translatable false-->
    <string name="todo" translatable="false">To-Do</string>
    <string name="idiomaboton">Boton de Idioma</string>
    <string name="logear">Entrar </string>
    <string name="imagenatras">imagenAtras</string>
    <string name="imagenusuario">imagen usuario </string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cch" translatable="false">CCH</string>
    <string name="guardar_canvios">Quieres guardar los canvios? </string>
    <string name="opcion_uno">Salir de la ventana </string>
    <string name="opcion_dos">Mantenerse en la ventana </string>
    <string name="minimo_cartas">Minimo 5 cartas negras y 15 blancas </string>
    <string name="numero_de_jugadores">Numero de jugadores </string>
    <string name="not_enough_players">No hay suficientes jugadores para empezar </string>
    <string name="game_winner_name">¡La partida se ha acabado! Ha ganado </string>
    <string name="game_canceled">La partida se ha cancelado </string>
    <string name="game_you_win_message">Has ganado </string>
    <string name="game_other_win_message">"Ha ganado "</string>
    <string name="game_winner_you_final_message">Tu</string>
    <string name="game_selectcards_noselection_f1">No se han seleccionado</string>
    <string name="game_selectcards_noselection_f2">cartas.</string>
    <string name="enviar_cartas">Enviar cartas</string>
    <string name="sala_player_title">Jugadores en sala:</string>
    <string name="start_game_prepartida">EMPEZAR</string>


</resources>
