<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragsBar.PerfilFragment">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombreU3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="34dp"
                android:text="@string/nombre_de_usuario"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/eTxtNombreU3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/txtCorreo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="34dp"
                android:text="@string/correo"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/eTxtCorreo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/txtPass4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="34dp"
                android:text="@string/contrase_a"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/eTxtPass4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/txtPartGana2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="34dp"
                android:text="@string/partidas_ganadas"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/eTxtPartGana2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="100dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:targetApi="o" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>